# tag-prompt-builder

./: .gitignore  README.md  apply_enc.bat  clean_pycache.bat  convert_json_to_db.py  pyproject.toml  requirements.txt  tag_prompt_builder.slnx
tag_prompt_builder/: app_config.py  db.py  main.py  requirements.txt  tag_prompt_builder.pyproj  utils.py
tag_prompt_builder/data/: default_tags.json
tag_prompt_builder/managers/: __init__.py  random_pool_manager.py  tag_manager.py
tag_prompt_builder/models/: __init__.py  tag_item.py  tag_model.py
tag_prompt_builder/resources/: default_tags.json  schema.sql
tag_prompt_builder/tools/: build_default_db.py
tag_prompt_builder/ui/: __init__.py  main_window.py
tag_prompt_builder/ui/dialogs/: __init__.py  layered_sort_panel.py  pool_tag_edit_dialog.py  preset_manager_dialog.py  random_pool_manager_dialog.py  random_slot_dialog.py
tag_prompt_builder/ui/helpers/: __init__.py  bracket_checker.py  random_util.py
tag_prompt_builder/ui/widgets/: __init__.py  favorites_panel.py  graphic_sort_panel.py  layered_sort_panel.py  preview_panel.py  sort_panel.py  tag_detail_panel.py  tag_filter_proxy.py  tag_tree_view.py
tag_prompt_builder/utils/: bracket_checker.py
tests/: conftest.py  test_models.py  test_tag_manager.py  test_utils.py
